@@ -1,3 +1,9 @@
+2015-10-15  Simon Dardis  <Simon.Dardis@imgtec.com>
+
+	* ld/ldexp.c: (try_copy_symbol_flags): New. Factored out from...
+	(exp_fold_tree_1): Here.  Cope with ternary operator in
+	assignments.  Use new helper.
+
 2014-11-18  Igor Zamyatin  <igor.zamyatin@intel.com>
 
 	* emulparams/elf_x86_64.sh (BNDPLT): Set to yes for x86_64.
